topology/namespace.yaml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "BRANCH_NAME",
    "labels": {
      "name": "BRANCH_NAME"
    }
  }
}
